<resources>
    <string name="app_name">WebDroid</string>

    <string name="directions">Go to webdroid.cf</string>
    <string name="directions_explanation">on the device that will be used as a screen</string>
    <string name="choice">Choose a way to connect</string>
    <string name="choice_explanation">to the browser that will be used as a screen</string>
    <string name="enter_code">Enter code</string>
    <string name="scan_code">Scan QR code</string>
    <string name="code_enter">Enter the code</string>
    <string name="code_enter_explanation">that appears in the browser</string>
    <string name="code_goes_here">Code goes here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr">Scan the QR code</string>
    <string name="testServer">ws://218.gaikaz.tk:80</string>
    <string name="mainServer">ws://webdroid.cf:80</string>
    <string name="color">Color</string>
    <string name="initials">Initials</string>
    <string name="name_hint">Your name</string>
    <string name="your_information">Your information</string>
    <string name="ready">Ready</string>
    <string name="update_info">Update info</string>
    <string name="calibrate">Calib.</string>
    <string name="name">Name</string>
    <string name="initials_hint">INI</string>
    <string name="waiting_connection">Waiting for connection</string>
    <string name="players_in_session">Players in session</string>
    <string name="waiting_for_players">Waiting for players</string>
    <string name="game_starting">Game is starting...</string>

</resources>
