<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="citrusfresh.webdroid.ConnectionChoiceFragment"
    android:layout_width="540dp"
    android:layout_height="200dp"
    android:background="@drawable/border"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choice"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"/>

    <TextView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="2"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/textView2"
        android:background="@drawable/step_circle"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choice_explanation"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:gravity="top|center"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:weightSum="2.0"
        android:layout_below="@+id/textView2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_code"
            android:id="@+id/button1"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/scan_code"
            android:id="@+id/button2"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            />
    </LinearLayout>

</RelativeLayout>