<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="citrusfresh.webdroid.CodeEnterFragment"
    android:layout_width="540dp"
    android:layout_height="240dp"
    android:background="@drawable/border"
    android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done!"
        android:id="@+id/button3"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/primaryText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/code_enter"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/textView2"
        android:background="@drawable/step_circle"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/code_enter_explanation"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:gravity="top|center"
        android:layout_above="@+id/editText"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_above="@+id/button3"
        android:layout_below="@+id/textView2"
        android:inputType="text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/code_goes_here" />

</RelativeLayout>